9. Генерирование колоды карт. FlatMap [#504873  [#504873]]